#353 - inital code (also requires ZM API patch) to support local and server timezones

--- a/www/index.html
+++ b/www/index.html
@@ -51,10 +51,12 @@
     <script src="lib/angular-translate-loader-static-files/angular-translate-loader-static-files.min.js"></script>
     <script src="lib/vis/dist/vis.min.js"></script>
     <script src="lib/moment/min/moment-with-locales.min.js"></script>
+    
     <script src="lib/ng-mfb/src/mfb-directive.js"></script>
     <script src="lib/angular-touch/angular-touch.js"></script>
 
     <!-- unmanaged externals -->
+   <script src="external/moment-timezone-with-data.min.js"></script>
     <script src="external/angular-ios9-uiwebview.patch.js"></script>
     <script src="external/ionRadio.js"></script>
     <script src="external/ng-websocket.js"></script>
