--- a/www/index.html
+++ b/www/index.html
@@ -188,12 +188,13 @@
                         <ion-item nav-clear menu-close href="#/login/false">
 
 
-                            <span class=" item-icon-left">
+                        <span class=" item-icon-left">
                             <i class="icon ion-person"></i>
-                         {{'kMenuZMSettings'|translate}}
-                            <span class="item-note" style="width:90px">
+                            {{'kMenuZMSettings'|translate}}
+                            <!--<span class="item-note" style="width:90px">
                                 {{$root.getProfileName();}}
-                            </span>
+                            </span>-->
+                                <span style="float:right;margin-top:-18px;background-color:#444444;color:#fff;font-size:11px;opacity:0.7;width:90px;border-radius: 0px 0px 5px 5px;:text-overflow:ellipsis;overflow:hidden;white-space:nowrap;display:inline-block;text-align:center;">&nbsp;{{$root.getProfileName();}}&nbsp;</span>
                         </span>     
 
                         </ion-item>
